--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.24.4",
     "bootstrap": "^5.3.3",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
